<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.autoboat.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Spinner
        android:id="@+id/list_vehicletype"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        android:entries="@array/type_arrays"
        android:prompt="@string/message_liste"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/edit_marque"
        android:layout_width="372dp"
        android:layout_height="0dp"
        android:hint="@string/message_marque"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/list_vehicletype" />

    <EditText
        android:id="@+id/edit_modele"
        android:layout_width="372dp"
        android:layout_height="0dp"
        android:hint="@string/message_modele"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_marque" />

    <EditText
        android:id="@+id/edit_kilometre"
        android:layout_width="372dp"
        android:layout_height="0dp"
        android:hint="@string/message_km"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_modele" />

    <EditText
        android:id="@+id/edit_nbheures"
        android:layout_width="372dp"
        android:layout_height="0dp"
        android:hint="@string/message_heures"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_kilometre" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_send"
        android:layout_marginStart="16dp"
        tools:layout_editor_absoluteX="97dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_nbCV" />

    <EditText
        android:id="@+id/edit_nbCV"
        android:layout_width="372dp"
        android:layout_height="0dp"
        android:layout_marginTop="-1dp"
        android:hint="@string/message_power"
        app:layout_constraintTop_toBottomOf="@+id/edit_nbheures"
        tools:layout_editor_absoluteX="6dp" />

</android.support.constraint.ConstraintLayout>
